--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   padding: 0 0;
-  color: aquamarine;
 }
 
 .main {
@@ -87,6 +86,17 @@
   max-width: 300px;
 }
 
+.h1 {
+  color: black;
+}
+
+.h4 {
+  color: grey;
+}
+
+.danger {
+  color: red;
+}
 .card:hover,
 .card:focus,
 .card:active {
